# 3PVG_PMG_garciaroi_riverodi

./: .gitignore  CMakeLists.txt  README.md  all_examples.lua  build_engine.lua  build_openxr.bat  openxr_config.lua  premake5.lua
doc/: Doxyfile  LavaEngineDocumentation.url  getting_started.md
doc/Getting Started/: getting_started.hpp
doc/HowTo/: how_to_camera.hpp  how_to_helloworld.hpp  how_to_input.hpp  (+5 more)
examples/: cartoon_demostrator.cpp  deferred_demostrator.cpp  ecs_render.cpp  flycam_demostrator.cpp  gaussian_splatting_demostrator.cpp  gltf_loader.cpp  hellotriangle.cpp  hellotrianglewithinput.cpp  job_system_demostrator.cpp  lights_demostrator.cpp  openxr_demostrator.cpp  pbr_demostrator.cpp  scripting_demostrator.cpp  shadows_demostrator.cpp  window.cpp  window_demostrator.cpp
include/: custom_engine.hpp  custom_types.hpp  custom_vulkan_helpers.hpp  custom_vulkan_inits.hpp  dynamic_ptr.hpp  hellotriangle.hpp  lava_descriptors.hpp  lava_engine.hpp  lava_global_helpers.hpp  lava_input.hpp  lava_job_system.hpp  lava_pipelines.hpp  lava_transform.hpp  lava_types.hpp  lava_vulkan_helpers.hpp  lava_vulkan_inits.hpp  lava_window.hpp  lava_window_system.hpp  lava_world.hpp  stdafx.hpp
src/: custom_engine.cpp  custom_vulkan_helpers.cpp  custom_vulkan_init.cpp  dynamic_ptr.cpp  lava_descriptors.cpp  lava_engine.cpp  lava_input.cpp  lava_job_system.cpp  lava_pipelines.cpp  lava_transform.cpp  lava_vulkan_helpers.cpp  lava_vulkan_init.cpp  lava_window.cpp  lava_window_system.cpp  lava_world.cpp
tools/: clearshaders.bat  compileshaders.bat  genstage.bat
(+195 files in other folders)
